# qr-code-tool

./: .gitignore  CMakeLists.txt  README.md
qr-code-tool/: main.py  requirements.txt
qr-code-tool/src/: __init__.py  generator.py  scanner.py
qr-code-tool/tests/: test_generator_scanner.py
src/: generator.cpp  scanner.cpp
tests/: CMakeLists.txt  test_scanner.cpp
